tests/NormalTests/paczka1/fuzzy1/32093143.err
Error in line 1: 6u9 S356 55,3
Error in line 2: gSRO A882 9,0
Error in line 3: 6u9 S60 14,3
Error in line 13: TXVYbqbqVr A711 41,6
Error in line 15: ASW A882 61,5
Error in line 23: A711 S60 40,0
Error in line 31: 6yUJHazX S356 43,3
Error in line 34: ASW S60 25,78
